# mlops-zoomcap

./: .pdm-python  pyproject.toml
01-intro/: homework.ipynb
02-experiment-tracking/: homework.ipynb  hpo.py  mlflow.db  register_model.py  train.py
02-experiment-tracking/artifacts/3/0167ccefaaf84b26943fcf8c12faeb4b/artifacts/model/: MLmodel
02-experiment-tracking/artifacts/3/093e02a5c47f49eb9335a04a9d2234c3/artifacts/model/metadata/: MLmodel
02-experiment-tracking/artifacts/3/2953d00de082418d96220fd0fbff2283/artifacts/model/metadata/: MLmodel
02-experiment-tracking/artifacts/3/54fdb66bbfa24fc3b66a29fd61084096/artifacts/model/: MLmodel
02-experiment-tracking/artifacts/3/55a3e2dd02a24ef88505455607be0605/artifacts/model/metadata/: MLmodel
02-experiment-tracking/artifacts/3/77bce3760b744ff09f96bbbebde82f09/artifacts/model/: MLmodel
02-experiment-tracking/artifacts/3/7dca432b92b54a74a7231a510d87d622/artifacts/model/: MLmodel
02-experiment-tracking/artifacts/3/a1c8ebd379144d1fa64e0da1de9139a3/artifacts/model/: MLmodel
02-experiment-tracking/artifacts/3/a571f3d71e6c454c944afd2d9fae1a6d/artifacts/model/metadata/: MLmodel
02-experiment-tracking/artifacts/3/ae0b9cdbe61648bb87e67cad11a9ea33/artifacts/model/metadata/: MLmodel
02-experiment-tracking/artifacts/3/aec65ee33c3f43a99f0a3088fd687df8/artifacts/model/: MLmodel
02-experiment-tracking/artifacts/3/c6b5d6e1f99c4c8982a6f483d4c615db/artifacts/model/: MLmodel
02-experiment-tracking/artifacts/3/d3ccae7012684611818d37cf9c19649e/artifacts/model/: MLmodel
02-experiment-tracking/mlruns/1/89a6597b72a24e8db92a12ce5d74f8d9/artifacts/model/: MLmodel
(+4 files in other folders)
